--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
@@ -14,6 +14,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!-- The main/home activity (has no parent activity) -->
         <activity
             android:name="me.barunsaha.software_engineering_lite.MainActivity"
             android:label="@string/app_name" 
@@ -25,10 +26,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- A child of the main activity -->
         <activity 
             android:name="me.barunsaha.software_engineering_lite.TabbedActivity" 
             android:configChanges="orientation|screenSize"
-        	android:screenOrientation="user" >           
+        	android:screenOrientation="user" 
+    	    android:parentActivityName="me.barunsaha.software_engineering_lite.MainActivity" >
+	        <!-- Parent activity meta-data to support API level 7+ -->
+	        <meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="me.barunsaha.software_engineering_lite.MainActivity" />
+        	           
         </activity>
     </application>
 
